[gd_scene load_steps=15 format=3 uid="uid://bjvquj1m8m4lk"]

[ext_resource type="Texture2D" uid="uid://wj7tdm6vnhqj" path="res://Assets/pool.png" id="1_8xiaf"]
[ext_resource type="Script" path="res://main.gd" id="1_j5f3c"]
[ext_resource type="PackedScene" uid="uid://dtl0wbjoonkjt" path="res://player/player.tscn" id="2_ccg2s"]
[ext_resource type="PackedScene" uid="uid://cklyfnqs6ynpf" path="res://robot/robot.tscn" id="4_yxd1t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eyyww"]
size = Vector2(4, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_15cty"]
size = Vector2(4, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdmj0"]
size = Vector2(128, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gspjw"]
size = Vector2(128, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xuukc"]
size = Vector2(120, 54)

[sub_resource type="LabelSettings" id="LabelSettings_d7kt8"]
font_size = 8
font_color = Color(0, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dmqm1"]
font_size = 8
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0eq2m"]
font_size = 8
font_color = Color(0.513726, 0.380392, 0.254902, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rv3cy"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_q44kg"]
font_size = 8

[node name="main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_j5f3c")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(64, 36)
zoom = Vector2(9, 9)

[node name="pool" type="CharacterBody2D" parent="."]

[node name="Pool" type="Sprite2D" parent="pool"]
position = Vector2(64, 36)
texture = ExtResource("1_8xiaf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pool"]
visible = false
position = Vector2(2, 36)
shape = SubResource("RectangleShape2D_eyyww")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="pool"]
visible = false
position = Vector2(126, 36)
shape = SubResource("RectangleShape2D_15cty")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="pool"]
visible = false
position = Vector2(64, 1.5)
shape = SubResource("RectangleShape2D_gdmj0")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="pool"]
visible = false
position = Vector2(64, 71)
shape = SubResource("RectangleShape2D_gspjw")

[node name="Area2D" type="Area2D" parent="pool"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pool/Area2D"]
position = Vector2(64, 31)
shape = SubResource("RectangleShape2D_xuukc")

[node name="player" parent="." instance=ExtResource("2_ccg2s")]
position = Vector2(60, 60)

[node name="robot" parent="." instance=ExtResource("4_yxd1t")]
position = Vector2(106, 63)

[node name="time_die" type="Timer" parent="robot"]
wait_time = 10.0
autostart = true

[node name="targets" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 2.0
offset_top = 64.0
offset_right = 42.0
offset_bottom = 72.0
theme_override_constants/separation = 0

[node name="player_score" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_d7kt8")

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "/"
label_settings = SubResource("LabelSettings_dmqm1")

[node name="robot_score" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_0eq2m")

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "  |  score: "
label_settings = SubResource("LabelSettings_rv3cy")

[node name="score" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_q44kg")

[connection signal="_on_rescure" from="player" to="." method="_on_player__on_rescure"]
[connection signal="rescure" from="robot" to="." method="_on_robot_rescure"]
[connection signal="timeout" from="robot/time_die" to="." method="_on_time_die_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
